Closed
Bug 363378
Opened 19 years ago
Closed 19 years ago
Caret gets stuck (or moves incorrectly) in empty table cells when using left/right arrow keys
Categories
(Core :: DOM: Selection, defect)
Core
DOM: Selection
Tracking
()
RESOLVED
FIXED
People
(Reporter: uriber, Assigned: uriber)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files)
|
1.18 KB,
text/html
|
Details | |
|
2.46 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
In caret browsing mode, using the the left/right arrow keys to navigate into an empty table cell may result in the caret disappearing from the screen, and becoming unmovable by further left/right arrow presses.
The description above is true when there is whitespace in the HTML around the empty <td> element. if there is no whitespace, the caret doesn't disappear into limbo, but still moves incorrectly and inconsistently.
Similar problems may occur with other kinds of empty block container frames (e.g., empty divs).
This is a regression from the "phase 1" patch to bug 300131.
Testcase and patch coming up.
| Assignee | ||
Comment 1•19 years ago
|
||
Instructions included.
| Assignee | ||
Comment 2•19 years ago
|
||
Don't allow the caret to rest in (empty) container frames.
Attachment #248182 -
Flags: superreview+
Attachment #248182 -
Flags: review?(roc)
Attachment #248182 -
Flags: review+
| Assignee | ||
Comment 3•19 years ago
|
||
Checked in:
Checking in mozilla/layout/generic/nsContainerFrame.cpp;
/cvsroot/mozilla/layout/generic/nsContainerFrame.cpp,v <-- nsContainerFrame.cpp
new revision: 1.264; previous revision: 1.263
done
Checking in mozilla/layout/generic/nsContainerFrame.h;
/cvsroot/mozilla/layout/generic/nsContainerFrame.h,v <-- nsContainerFrame.h
new revision: 3.73; previous revision: 3.72
done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•