Bug 363378: Caret gets stuck (or moves incorrectly) in empty table cells when using left/right arrow keys. r+sr=roc